Use reflection class for caching